TEST_PROGRAMS/INVALID/evan_vassallo/incorrectProg1.min
#meaningless text (pound sign entered too far into the line)
Incorrect program # 1

